# 2WayCom

./: .clang-format  API.cpp  API.h  Application.cpp  Application.h  CMakeLists.txt  HAL.cpp  HAL.h  I_API.h  I_ApiToApp.h  I_Application.h  I_HAL.h  I_HalToApp.h  conanfile.txt  main.cpp
test/: CMakeLists.txt  test_Application.cpp
